# simulabra

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  agent.js  base.js  boot.js  build.sh  bun-loader.js  bun.lockb  bunfig.toml  commands.js  demo-web.js  demo.js  estree.js  game.html  game.js  html.js  http.js  lang.js  lisp.js  lisp2.js  llm-overview  loader.js  modules-idea.js  package.json  pro.js  protobench.js  protostructure.css  protostructure.html  pushbump.sh  replace.sh  run_sample.sh  runner.js  serve.sh  simulabra.service  smoperat.js  tasken.txt  test.js  todos.js  (+3 more)
contexts/: dummy.js  master.js
core/: 2d.simulabra  2d2.simulabra  Cargo.toml  agent.simulabra  html.simulabra  http.simulabra  macros.simulabra  points.simulabra  run_sample.sh  ufcn.simulabra  vending-machine.simulabra
core/models/: fire.py
core/models/sample/agents/: fire.py
core/simulabra-pylib/: Cargo.toml
core/simulabra-pylib/simulabra/: __init__.py
core/simulabra-pylib/src/: lib.rs
core/src/: agent.rs  err.rs  lang.rs  main.rs  model.rs
core/src/lang/: mod.rs  parser.rs
demos/: agenda.js  counter.html  counter.js  dummy.html  index.html  index.js  loom.html  loom.js  todos.js  treetext.html  treetext.js
desktop/: package-lock.json  package.json
doc/: base.txt
extra/: lang.txt
misc/: lisp.txt  live.txt  protobench.js
models/: fire.py
prompts/: crc.txt
pyserver/: app.py  entropix.py  requirements.txt
simulabra-pylib/: pyproject.toml
site/: build.sh  index.html  package-lock.json  package.json
sps/: projects.jsonl
src/: agenda.js  agent.js  agent.jsx  (+35 more)
(+210 files in other folders)
