[package]
name = "simulabra-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]

[lib]
name = "simulabra_core"
crate-type = ["cdylib"]
